0030829: BRepExtrema_ShapeProximity crashes with shape from STL/WRL

The fix makes algorithm independent on geometrical data. Only triangulation is needed for its work.